--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/novy_kanal.svg" />
     <link rel="stylesheet" href="/src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Halo</title>
+    <title>Halo | Cosmetics & Beauty</title>
   </head>
   <body class="font-display">
     <div id="root"></div>
